# guild-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml
guild_manager/: __init__.py  cog.py
